Configuration file and environmental variables for image service
This will help transition between dev and production environments

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,9 @@ services:
     environment:
       - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+      - MQ_HOST=rabbitmq-service
+      - MQ_PORT=5672
+      - REDIS_HOST=redis
   frontend:
     image: superpolkadance/dailywooffrontend
     build: frontend
