--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,59 +14,74 @@ stages:
   - test
   - release
   - deploy
-  - cleanup
 
-# docker-compose does not come with the image normally, so lets add it
 before_script:
-  - apk add --update python py-pip python-dev && pip install docker-compose
   - docker version
-  - docker-compose version
   - docker info
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
-
-build:
-  stage: build
-  script:
-    - docker-compose pull
-    - docker-compose build
 
 build_front_end:
   stage: build
   script:
     - cd frontend
-    - "docker build -t registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_JOB_ID ."
-    - docker push registry.gitlab.com/mattmatters/dailywoof
+    - docker build -t registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME .
+    - docker push registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME
 
+build_natlang:
+  stage: build
+  script:
+    - cd natlang
+    - docker build -t registry.gitlab.com/mattmatters/dailywoof/nlp:$CI_COMMIT_REF_NAME .
+    - docker push registry.gitlab.com/mattmatters/dailywoof/nlp:$CI_COMMIT_REF_NAME
+
+build_api:
+  stage: build
+  script:
+    - cd web
+    - docker build -t registry.gitlab.com/mattmatters/dailywoof/web:$CI_COMMIT_REF_NAME .
+    - docker push registry.gitlab.com/mattmatters/dailywoof/web:$CI_COMMIT_REF_NAME
+
+build_scraper:
+  stage: build
+  script:
+    - cd scraper
+    - docker build -t registry.gitlab.com/mattmatters/dailywoof/scraper:$CI_COMMIT_REF_NAME .
+    - docker push registry.gitlab.com/mattmatters/dailywoof/scraper:$CI_COMMIT_REF_NAME
+
+build_image:
+  stage: build
+  script:
+    - cd images
+    - docker build -t registry.gitlab.com/mattmatters/dailywoof/image:$CI_COMMIT_REF_NAME .
+    - docker push registry.gitlab.com/mattmatters/dailywoof/image:$CI_COMMIT_REF_NAME
+
+# Test everything
 test_front_end:
   stage: test
   script:
-    - docker-compose run frontend npm run lint
-    - docker-compose run frontend npm run test
+    - docker pull registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME
+    - docker run registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME npm run lint
+    - docker run registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME npm run test
 
 test_scraper:
   stage: test
   script:
-    - docker-compose run scraper pytest
+    - docker pull registry.gitlab.com/mattmatters/dailywoof/scraper:$CI_COMMIT_REF_NAME
+    - docker run registry.gitlab.com/mattmatters/dailywoof/scraper:$CI_COMMIT_REF_NAME pytest
 
 test_natlang:
   stage: test
   script:
-    - docker-compose run natlang pytest
+    - docker pull registry.gitlab.com/mattmatters/dailywoof/nlp:$CI_COMMIT_REF_NAME
+    - docker run registry.gitlab.com/mattmatters/dailywoof/nlp:$CI_COMMIT_REF_NAME pytest
 
-# release_containers:
-#   stage: release
-#   script:
-#     - docker-compose pull -t $CI_JOB_NAME
-#     - docker-compose tag $CI_JOB_NAME latest
-#     - docker-compose push
-#   only:
-#     - master
-
+# Prepare everything for release
 release_front_end:
   stage: release
   script:
+    - docker pull registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME
     - mkdir ./front_build
-    - BUILD="PROD" docker-compose run -v "$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"/front_build:/go/src/app/dist frontend:$CI_JOB_NAME
+    - BUILD="PROD" docker run -v "$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"/front_build:/go/src/app/dist registry.gitlab.com/mattmatters/dailywoof/frontend:$CI_COMMIT_REF_NAME
   only:
     - master
 
@@ -88,9 +103,3 @@ deploy_front_end:
     - aws s3 cp ./front_build/index.html $INDEX_BUCKET # index.html
   only:
     - master
-
-cleanup:
-  stage: cleanup
-  script:
-    - docker-compose down
-    - rm -rf ./front_build
